--- a/src/components/Todo/Todo.module.scss
+++ b/src/components/Todo/Todo.module.scss
@@ -9,10 +9,11 @@
 	backdrop-filter: blur(7.5px);
 	overflow: hidden;
 
-	margin: 10px;
+	margin: 10px 0 10px 100px;
 	padding: 19px 30px 19px 23px;
 	border-radius: 30px;
-	height: 653px;
+	height: 100%;
+	max-height: 603px;
 	width: 100%;
 	max-width: 438px;
 
